<resources>
    <string name="app_name">Mera Kissan</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="offer_for_sale">Offer For Sale</string>
    <string name="update_details">Update Details</string>
    <string name="show_orders">Show Orders</string>
    <string name="signout">Signout</string>
    <string name="product_details">Product Details</string>
    <string name="machinery">Machinery</string>
    <string name="cattle">Cattle</string>
    <string name="product_type">Select Product Type</string>
    <string name="livestock">Livestock</string>
    <string name="select_product_category">Select product category</string>
    <string name="add_product">Add Product</string>
    <string name="show_produts">Show Produts</string>
</resources>
