<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/home_screen"
        android:icon="@drawable/ic_home_menu"

        android:title="@string/home"/>
    <item android:id="@+id/sell_screen"
        android:icon="@drawable/ic_commerce_and_shopping"
        android:title="@string/offer_for_sale"/>
    <item android:id="@+id/update_user_details"
        android:icon="@drawable/ic_update"
        android:title="@string/update_details"/>
    <item
        android:id="@+id/show_products"
        android:icon="@drawable/ic_show_products"
        android:title="@string/show_produts"></item>
    <item android:id="@+id/user_orders"
        android:icon="@drawable/ic_show_orders"
        android:title="Your Orders"></item>
    <item
        android:id="@+id/log_out"
        android:icon="@drawable/ic_signout"
        android:title="@string/signout"></item>
</menu>